--- a/newsletter/2022-10-23.md
+++ b/newsletter/2022-10-23.md
@@ -6,21 +6,19 @@
 
 **On to the latest headlines about decentralization:**
 
-- **Venture giant Andreesen Horowitz participated** in just [seven funding rounds](https://fortune.com/2022/10/21/a16z-crypto-venture-funding-drop-chart/) with crypto startups in the third quarter, down from their peak of 26 deals in last year's fourth period. The slowdown is symptomatic of a broader slowdown in crypto startup investment by venture capital firms. Crypto VC activity [fell 50% industrywide](https://fortune.com/crypto/2022/10/05/crypto-vc-funding-down-50-from-last-quarter/) in the third quarter compared to the second quarter, according to Fortune magazine.
+- **Venture giant Andreesen Horowitz participated** in just [seven funding rounds](https://fortune.com/2022/10/21/a16z-crypto-venture-funding-drop-chart/) with crypto startups in the third quarter, down from their peak of 26 deals in last year's fourth period. The drop is symptomatic of a broader slowdown in crypto startup investment by venture capital firms. Crypto VC activity [fell 50% industrywide](https://fortune.com/crypto/2022/10/05/crypto-vc-funding-down-50-from-last-quarter/) in the third quarter compared to the second quarter, according to Fortune magazine.
 
 - **The Bitcoin network** took over an hour to [verify one new block](https://www.coindesk.com/business/2022/10/17/bitcoin-fails-to-produce-1-block-for-over-an-hour/) of transactions last Monday. (For all the non-technical folks reading this, let it suffice that's not good. At all.)
 
 - **Trading activity in non-fungible tokens plunged** to $1.68 billion in the third quarter, down 77% compared to the second period, according to [new research](https://nonfungible.com/news/corporate/nft-market-report-q3-2022) by the data site NonFungible.
 
-- **The Tether stablecoin** is coming to [24,000 ATMs in Brazil](https://decrypt.co/112544/tether-usdt-will-be-available-from-24000-atms-across-brazil) next month through a partnership with SmartPay.
+- **Links between cryto and traditional banking continue to grow.** The Tether stablecoin is coming to [24,000 ATMs in Brazil](https://decrypt.co/112544/tether-usdt-will-be-available-from-24000-atms-across-brazil) next month through a partnership with SmartPay. MetaMask [partnered with Sardine](https://decrypt.co/112014/ethereum-wallet-metamask-instant-bank-crypto-ach) to ease transfers of crypto to fiat money. Meanwhile, both [Mastercard](https://www.mastercard.com/news/press/2022/october/mastercard-to-bring-crypto-trading-capabilities-to-banks/) and [Fidelity](https://twitter.com/brucefenton/status/1582806632425062401) announced new services for institutional crypto traders.
 
-- **Other links between cryto and traditional banks are growing as well.**  MetaMask [partnered with Sardine](https://decrypt.co/112014/ethereum-wallet-metamask-instant-bank-crypto-ach) to ease transfers of crypto to fiat money. Meanwhile, both [Mastercard](https://www.mastercard.com/news/press/2022/october/mastercard-to-bring-crypto-trading-capabilities-to-banks/) and [Fidelity](https://twitter.com/brucefenton/status/1582806632425062401) announced new services for institutional crypto traders.
-
-- **Bankrupt crypto lender Voyager Digital** received initial court approval for a proposal to sell its remaining assets to the exchange FTX [for $1.4 billion](https://www.reuters.com/legal/litigation/crypto-lender-voyager-sends-142-bln-ftx-sale-creditor-vote-2022-10-19/). Voyagher' screditors must now vote on the plan by Nov. 29. If it passes, the creditors would recoup 72% of their losses, according to [court filings](https://cases.stretto.com/public/x193/11753/PLEADINGS/1175310192280000000017.pdf).
+- **Bankrupt crypto lender Voyager Digital** received initial court approval for a proposal to sell its remaining assets to the exchange FTX [for $1.4 billion](https://www.reuters.com/legal/litigation/crypto-lender-voyager-sends-142-bln-ftx-sale-creditor-vote-2022-10-19/). Voyager's creditors must now vote on the plan by Nov. 29. If it passes, the creditors would recoup 72% of their losses, according to [court filings](https://cases.stretto.com/public/x193/11753/PLEADINGS/1175310192280000000017.pdf).
 
 - **Ex-Meta employees** announced the [launch](https://unchainedpodcast.com/aptos-mainnet-goes-live-but-the-crypto-community-is-skeptical/) a new application-focused blockchain called Aptos. The project has [raised more than $350 million](https://www.coindesk.com/business/2022/07/25/aptos-labs-raises-150m-to-revive-diem-in-ftx-ventures-led-funding-round/) from venture investors.
 
-- **New woes among web2 social networks:** Forbes [reports](https://www.forbes.com/sites/emilybaker-white/2022/10/20/tiktok-bytedance-surveillance-american-user-data/?sh=48fab5f66c2d) that TikTok's China-based parent ByteDance had plans to track the location of specific users in America. The Mozilla Foundation published [an independent study](https://foundation.mozilla.org/en/youtube/user-controls/?utm_source=email&utm_campaign=youtuberr2022&utm_medium=email&utm_content=kicker_email) of users' ability to give feedback that affects which videos YouTube's algorithm recommends to them. The system does not effectively prevent "unwanted" recommendations, including videos with spam and misinformation, Mozilla says. Separately, the Washington Post reports that Twitter may [cut its workforce](https://www.washingtonpost.com/technology/2022/10/20/musk-twitter-acquisition-staff-cuts/) significantly in the months ahead regardless of whether its sale to Elon Musk goes through. The reductions could seriously hinder the company's efforts to police hate speech and protect user privacy, according to the Post.
+- **New woes among web2 social networks:** Forbes [reports](https://www.forbes.com/sites/emilybaker-white/2022/10/20/tiktok-bytedance-surveillance-american-user-data/?sh=48fab5f66c2d) that TikTok's China-based parent ByteDance had plans to track the location of specific users in America. The Mozilla Foundation published [an independent study](https://foundation.mozilla.org/en/youtube/user-controls/?utm_source=email&utm_campaign=youtuberr2022&utm_medium=email&utm_content=kicker_email) of users' ability to give feedback that affects which videos YouTube's algorithm recommends to them. The system does not effectively prevent "unwanted" recommendations, including videos with spam and misinformation, Mozilla says. Separately, the Washington Post reports that Twitter may [cut its workforce](https://www.washingtonpost.com/technology/2022/10/20/musk-twitter-acquisition-staff-cuts/) significantly in the months ahead regardless of whether its sale to Elon Musk goes through.
 
 - **Where in the world is Do Kwon?** South Korean authorities confirmed to Bloomberg News they believe the fugitive Terraform Labs co-founder recently [passed through Dubai](https://www.coindesk.com/business/2022/10/21/s-korean-prosecutors-say-reports-of-do-kwons-stopover-in-dubai-not-false-report/), but they're not sure where he was ultimately headed. Meanwhile, he seems to have podcaster Laura Shin [on speed dial](https://www.youtube.com/watch?v=RgYSJVC7Ps8), and Interpol is looking for him [in the metaverse](https://cointelegraph.com/news/put-your-hands-up-interpol-storms-into-the-metaverse). Hmmm...
 
@@ -28,11 +26,11 @@
 
 - **The collaborative journalism project Future Tense** is tracking proposals to [reform Section 230](https://slate.com/technology/2022/10/section-230-legislative-reform-tracker-introduction.html). The 1990s-era U.S. law covers (or doesn't at this point) many issues around online privacy and liability.
 
-- **A Norwegian court** ruled [against Craig Wright](https://www.coindesk.com/policy/2022/10/20/hodlonaut-wins-norwegian-lawsuit-against-self-styled-satoshi-craig-wright/), who claims he is Satoshi Nakamoto, in his dispute with a bitcoiner who has mocked that claim on Twitter.
+- **A Norwegian court** ruled [against Craig Wright](https://www.coindesk.com/policy/2022/10/20/hodlonaut-wins-norwegian-lawsuit-against-self-styled-satoshi-craig-wright/), who claims he is Satoshi Nakamoto, in his dispute with a bitcoiner who has mocked that assertion on Twitter.
 
 - **The inaugural American Metaverse Summit & Awards** is now set for [March 2023 in Miami](https://www.americanmetaverseawards.com/). Nominations for the awards portion of the event are welcome through Nov. 15 [here](https://cts.businesswire.com/ct/CT?id=smartlink&url=https%3A%2F%2Fwww.americanmetaverseawards.com%2Fnominations.html&esheet=52930785&newsitemid=20220929005736&lan=en-US&anchor=here&index=2&md5=a282af612c08a143d52a55305616af90). (Thanks to reader Lisa Lopez for alerting me to this one.)
 
-- **Behold Pan Solo!** The New York Times reports that a baker in Benicia, California, has made a life-size [bread sculpture of Han Solo](https://www.nytimes.com/2022/10/15/us/han-solo-bakery-sculpture.html) imprisoned in carbonite. The bakery calls this masterpiece "Pan Solo," in the tradition of previous works like the "Pain-dou-lorian," "Baby Dough-Da," and "Dough-ki," in honor of the Marvel character Alligator Loki.
+- **Behold Pan Solo!** The New York Times reports that a baker in Benicia, California, has made a life-size [bread sculpture of Han Solo](https://www.nytimes.com/2022/10/15/us/han-solo-bakery-sculpture.html) imprisoned in carbonite. The bakery calls this masterpiece "Pan Solo," in the tradition of previous works like the "Pain-dou-lorian," "Baby Dough-Da," and "Dough-ki," based on the Marvel character Alligator Loki.
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
