Edits to bulleted news items for Oct 30

--- a/newsletter/2022-10-30.md
+++ b/newsletter/2022-10-30.md
@@ -19,9 +19,11 @@ The week's other notable headlines:
 
 - **A majority of the Ethereum chain is now validated through nodes that comply with U.S. sanctions.** According to data from the mining site [MEVWatch](https://www.mevwatch.info/), 60% of weekly Ethereum transaction blocks through Friday evening were handled through relays that enforce rules set by the Treasury Department's Office of Foreign Asset Control, which enforces sanctions. Such compliance is controversial among many blockchain purists, including the MEVWatch team, as they consider it government censorship of the Ethereum chain.
 
-- **Big Tech loves web3... It loves it not.** Google announced a new cloud service for running Ethereum nodes. <!-- https://www.coindesk.com/tech/2022/10/27/google-introduces-cloud-based-blockchain-node-service-for-ethereum/ --> Meanwhile, Apple changed its  terms of service to require that any sales of cryptoassets be structured as in-app purchases -- thus subject to Apple taking a 30% cut. Oy... <!-- Need link -->
+- Google announced a new cloud service for running Ethereum nodes. <!-- https://www.coindesk.com/tech/2022/10/27/google-introduces-cloud-based-blockchain-node-service-for-ethereum/ -->
 
-- **...And Wall Street suddenly hates Big Tech.** Facebook shares were walloped, leaving their price down more than 70% on the year, after Zuckerberg reiterated he's sticking to his metaverse plans. <!-- https://slate.com/technology/2022/10/facebook-meta-earnings-zuckerberg-metaverse.html --> Amazon warned that it is expecting the slowest holiday shopping season in its history. GOOG and MSFT... But Apple was a rare bright spot for the sector, gaining after it reported revenue slightly ahead of analysts expections. <!-- Need a better link but for now let's go with https://www.benzinga.com/trading-ideas/movers/22/10/29458786/whats-going-on-with-apple-shares --> | Digiday coverage: <!-- https://digiday.com/marketing/meta-google-earnings-suggest-rip-to-the-platform-momentum-narrative/ | BBC: https://www.bbc.com/news/business-63394516-->
+- Apple changed its  terms of service to require that any sales of cryptoassets be structured as in-app purchases -- thus subject to Apple taking a 30% cut. Oy... <!-- Need link -->
+
+- **A rocky week on Wall Street for Big Tech.** Facebook shares were walloped, leaving their price down more than 70% on the year, after Zuckerberg reiterated he's sticking to his metaverse plans. <!-- https://slate.com/technology/2022/10/facebook-meta-earnings-zuckerberg-metaverse.html --> Amazon warned that it is expecting the slowest holiday shopping season in its history. GOOG and MSFT... But Apple was a rare bright spot for the sector, gaining after it reported revenue slightly ahead of analysts expections. <!-- Need a better link but for now let's go with https://www.benzinga.com/trading-ideas/movers/22/10/29458786/whats-going-on-with-apple-shares --> | Digiday coverage: <!-- https://digiday.com/marketing/meta-google-earnings-suggest-rip-to-the-platform-momentum-narrative/ | BBC: https://www.bbc.com/news/business-63394516-->
 
 - **Bitcoin update:** BTC market share has risen vs altcoins, near a two-year high. <!-- https://blog.kaiko.com/btc-market-share-hits-2-year-high-965238a64e9b --> BTC reclaimed the 20,000 level, up tk% for the week. <!-- Need link --> Morgan Stanley reports that a record number of BTC have been held for six months or longer. <!-- https://www.coindesk.com/policy/2022/10/28/el-salvador-lugano-sign-agreement-to-help-spread-bitcoin-adoption-and-education/
 -->
