Fleshed-out copy for 30 Oct 2022

--- a/newsletter/2022-10-30.md
+++ b/newsletter/2022-10-30.md
@@ -17,55 +17,31 @@ The piece is overall a great "guide," as it's billed on the print edition's cove
 
 The week's other notable headlines:
 
+- **Crypto jumped, handily outperforming publicly traded tech stocks.** The global token market's valuation climbed back above $1 trillion, helped by a 7% weekly rise in bitcoin. (By comparison, the Nasdaq Composite Index was up just 2%.) [Bitcoin's valuation](https://coinmarketcap.com/currencies/bitcoin/) is now just shy of $400 billion, worth [more than JPMorgan Chase](https://finance.yahoo.com/quote/JPM/key-statistics?p=JPM). The token has been showing improved fundamentals lately, including [a record number of long-term holders](https://sg.finance.yahoo.com/news/morgan-stanley-record-number-bitcoin-101656223.html) and strong [trading volume versus altcoins](https://blog.kaiko.com/btc-market-share-hits-2-year-high-965238a64e9b).
+
+- **Big Tech's earnings reports contained worrisome signs.** Facebook parent Meta reported a [$3.7 billion quarterly loss](https://decrypt.co/112952/metas-metaverse-division-reports-3-67-billion-quarterly-loss) on Reality Labs, its new metaverse division. Its shares have plunged more than 70% in 2022, but CEO Mark Zuckerberg says he's [sticking by](https://slate.com/technology/2022/10/facebook-meta-earnings-zuckerberg-metaverse.html) his long-term bet on the metaverse. Elsewhere, Google and Microsoft both reported [disappointing quarterly sales](https://www.bbc.com/news/business-63394516). And Amazon shares fell after it forecast a surprisingly [weak holiday shopping season](https://www.cnet.com/tech/services-and-software/amazons-holiday-shopping-outlook-delivers-more-gloom-than-cheer/) through year-end. But Apple was a [bright spot](https://seekingalpha.com/news/3897488-why-did-apple-shares-rise-nearly-8-on-friday-its-a-rock-of-gibraltar-in-big-tech), up almost 8% Friday after it reported profits ahead of analysts' expectations, driven by strong iPhone sales.
+
+- **Apple updated** its  terms of service for crypto apps. Among [the changes](https://www.nbcnews.com/tech/crypto/apple-tightens-rules-crypto-nfts-app-store-rcna53905) is a requirement that any sales of non-fungible tokens (NFTs) be structured as in-app purchases -- thus subject to Apple taking a 30% cut.
+
+- **Google announced** it will launch a new cloud service for [running Ethereum nodes](https://www.coindesk.com/tech/2022/10/27/google-introduces-cloud-based-blockchain-node-service-for-ethereum/).
+
 - **A majority of the Ethereum chain is now validated through nodes that comply with U.S. sanctions.** According to data from the mining site [MEVWatch](https://www.mevwatch.info/), 60% of weekly Ethereum transaction blocks through Friday evening were handled through relays that enforce rules set by the Treasury Department's Office of Foreign Asset Control, which enforces sanctions. Such compliance is controversial among many blockchain purists, including the MEVWatch team, as they consider it government censorship of the Ethereum chain.
 
-- Google announced a new cloud service for running Ethereum nodes. <!-- https://www.coindesk.com/tech/2022/10/27/google-introduces-cloud-based-blockchain-node-service-for-ethereum/ -->
+- **Users of decentralized platforms approved some big changes.** Sushi DAO voted to [split into three legal entities](https://unchainedpodcast.com/sushi-dao-votes-to-split-into-3-legal-entities-in-cayman-islands-and-panama/) based in the Cayman Islands and Panama. And the Compound community voted to [pause trading](https://unchainedpodcast.com/compound-votes-to-pause-activity-for-illiquid-crypto-assets/) in four illiquid tokens.
 
-- Apple changed its  terms of service to require that any sales of cryptoassets be structured as in-app purchases -- thus subject to Apple taking a 30% cut. Oy... <!-- Need link -->
+- **Institutional shareholders in Celsisus** lost a key battle in U.S. bankruptcy court, where they wanted to form a special committee to better represent their interests versus individual investors. The judge [said no](https://247wallst.com/investing/2022/10/25/court-accepts-celsius-december-auction-date-rejects-shareholder-committee/).
 
-- **A rocky week on Wall Street for Big Tech.** Facebook shares were walloped, leaving their price down more than 70% on the year, after Zuckerberg reiterated he's sticking to his metaverse plans. <!-- https://slate.com/technology/2022/10/facebook-meta-earnings-zuckerberg-metaverse.html --> Amazon warned that it is expecting the slowest holiday shopping season in its history. GOOG and MSFT... But Apple was a rare bright spot for the sector, gaining after it reported revenue slightly ahead of analysts expections. <!-- Need a better link but for now let's go with https://www.benzinga.com/trading-ideas/movers/22/10/29458786/whats-going-on-with-apple-shares --> | Digiday coverage: <!-- https://digiday.com/marketing/meta-google-earnings-suggest-rip-to-the-platform-momentum-narrative/ | BBC: https://www.bbc.com/news/business-63394516-->
+- **Binance launched** new oracle software to enable web3 applications to [process real-world data](https://www.bnbchain.org/en/blog/binance-launches-oracle-network-to-power-web3-and-bnb-chain-ecosystem/).
 
-- **Bitcoin update:** BTC market share has risen vs altcoins, near a two-year high. <!-- https://blog.kaiko.com/btc-market-share-hits-2-year-high-965238a64e9b --> BTC reclaimed the 20,000 level, up tk% for the week. <!-- Need link --> Morgan Stanley reports that a record number of BTC have been held for six months or longer. <!-- https://www.coindesk.com/policy/2022/10/28/el-salvador-lugano-sign-agreement-to-help-spread-bitcoin-adoption-and-education/
--->
-
-- El Salvador and the Swiss city of Lugano formed a new partnership to promote investor education and adoption of bitcoin in their respective regions. <!-- https://www.coindesk.com/policy/2022/10/28/el-salvador-lugano-sign-agreement-to-help-spread-bitcoin-adoption-and-education/ -->
-
-- **DeFi platforms on the move:** The Compound community voted to pause trading in four illiquid tokens. <!-- https://unchainedpodcast.com/compound-votes-to-pause-activity-for-illiquid-crypto-assets/ --> Meanwhile, Sushi DAO voted to split into three legal entities in the Cayman Islands and Panama. <!-- https://unchainedpodcast.com/sushi-dao-votes-to-split-into-3-legal-entities-in-cayman-islands-and-panama/ -->
-
-- Hong Kong may ease crypto regulations soon, Boomberg reports. <!-- https://www.bloomberg.com/news/articles/2022-10-27/hong-kong-plans-to-legalize-retail-crypto-trading-to-become-hub -->
-
-- Messari published new research about the state of Solana. <!-- https://messari.io/report/state-of-solana-q3-2022 -->
-
-- The Wall Street Journal reported on a16z's losses on crypto startups. <!-- https://www.wsj.com/articles/andreessen-horowitz-went-all-in-on-crypto-at-the-worst-possible-time-11666769270?mod=djemalertNEWS -->
-
-- New Fidelity survey suggests 74% of financial institutions intend to buy crypto. <!-- https://blockworks.co/74-of-institutions-plan-to-buy-crypto-fidelity-survey/ -->
-
-- **New British prime minister Rishi Sunak** has previously advocated regulatory changes to turn the United Kingdom [into a global crypto hub](https://news.yahoo.com/rishi-sunak-crypto-hub-bitcoin-123727766.html). Hence his selection as PM is raising fresh hopes among crypto pros for enactment of such policies soon.
-
-- Twitter update. <!-- Crypto investors hoping Musk will integrate tokenization into the social network in some way. https://blockworks.co/crypto-faithfuls-await-elon-musks-blockchain-plans-for-twitter/ |  DOGE price is way up..;. https://www.coindesk.com/markets/2022/10/24/dogechain-token-price-triples-in-seven-days/ -->
-
-<!--
-- Elon Musk visited Twitter headquarters. <!-- https://decrypt.co/112992/elon-musk-explains-why-twitter-dogecoin --> | Musketeers? <!-- https://www.nytimes.com/2022/10/27/opinion/elon-musk-twitter-purchase-robber-baron.html
-
-https://www.coindesk.com/business/2022/10/28/elon-musk-finally-closes-deal-to-purchase-twitter-cnbc-reports/
-
--- >
-
-- Early TikTok users in the U.S. began receiving checks up to $167 as part of a court settlement regarding privacy violations. Other apps could be next. <!-- https://www.cnbc.com/2022/10/28/tiktok-users-paid-over-privacy-violations-google-snap-could-be-next.html -->
-
-- Binance launched a new oracle for web3 applications. <!-- https://www.bnbchain.org/en/blog/binance-launches-oracle-network-to-power-web3-and-bnb-chain-ecosystem/ -->
-
-- Celsius shareholders lost a key battle in court. <!-- Need link -->
+- **New analyst research:** Messari published a report on the [state of Solana](https://messari.io/report/state-of-solana-q3-2022), based on on-chain through end of the third quarter. Separately, [74% of institutional investors](https://blockworks.co/74-of-institutions-plan-to-buy-crypto-fidelity-survey/) who participated in a new survey by Fidelity Investments say they indend to buy crypto in the future.
 
 - **FTX** may have a stablecoin [in the works](https://decrypt.co/112975/ftx-chief-teases-native-stablecoin-launch-not-too-distant-future).
 
-- Meta's Metaverse division posted a $3.67 billion loss in the third quarter. <!-- https://decrypt.co/112952/metas-metaverse-division-reports-3-67-billion-quarterly-loss -->
+- **Good news on global regulation?** New British prime minister Rishi Sunak has previously advocated regulatory changes to turn the United Kingdom [into a global crypto hub](https://news.yahoo.com/rishi-sunak-crypto-hub-bitcoin-123727766.html). Hence his selection as PM is raising fresh hopes among crypto pros for enactment of such policies soon. Meanwhile, Hong Kong may [ease crypto trading rules](https://cointelegraph.com/news/not-like-china-hong-kong-reportedly-wants-to-legalize-crypto-trading) for retail investors soon, differentiating itself from mainland China's more restrictive approach.
 
-- Decentralized Engineering Corp. has raised $9 million to build a web3 version of Uber on the Solana blockchain. <!-- https://decrypt.co/112957/teleport-creators-raise-9m-build-decentralized-uber-rival-solana -->
+- **It's not immediately clear** whether or how Elon Musk might integrate blockchain-based features into Twitter now that his acquisition of the social network has [closed](https://decrypt.co/112992/elon-musk-explains-why-twitter-dogecoin). But, hey. People can [hope](https://blockworks.co/crypto-faithfuls-await-elon-musks-blockchain-plans-for-twitter/) based on his previous affinity for Bitcoin and Dogecoin.
 
-- Aptos is luring NFT activity away from Solana. <!-- https://decrypt.co/112934/aptos-solana-nft-traders-creators --> | Critical flaw found in Aptos virtual machine. <!-- https://thehackernews.com/2022/10/critical-flaw-reported-in-move-virtual.html -->
-
-- Halloween costumes for broke crypto tradrs <!-- https://www.coindesk.com/layer2/2022/10/27/halloween-costumes-for-broke-crypto-traders/ -->
+- **CoinDesk offered** some Halloween costume ideas [for broke crypto traders](https://www.coindesk.com/layer2/2022/10/27/halloween-costumes-for-broke-crypto-traders/). 😐
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
