--- a/newsletter/2022-11-06.md
+++ b/newsletter/2022-11-06.md
@@ -1,4 +1,4 @@
-# Can we please have a metaverse, minus Meta?
+# Could we have a metaverse without Meta?
 ## #Web3Weekly: Oct. 30 to Nov. 5, 2022
 
 ![User wearing a VR headset](https://images.unsplash.com/photo-1653565685070-660c4cf6c68b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80)
@@ -8,29 +8,29 @@
 
 *Take a break from cold crypto winds. Soak up Miami’s sun, find awesome networking opportunities or discover your next hot investment among the up-and-coming startups exhibiting at the show. Join TechCrunch at TC Sessions: Crypto in Miami on November 17 by being one of the first 25 people to register with [this link](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3wmiami&display=true)!*
 
-**I'll confess that I haven't become a huge fan of the metaverse** (with a small m) so far. But I like capital-m Meta -- the company formerly known as Facebook -- [even less](https://peteramckay.medium.com/whatever-they-call-it-facebook-will-still-suck-b167e64d8ec).
+**I'll confess I haven't yet become a huge fan** of the metaverse,  with a small m, referring broadly to a group of emerging technologies. But I like capital-m Meta -- the company formerly known as Facebook -- [even less](https://peteramckay.medium.com/whatever-they-call-it-facebook-will-still-suck-b167e64d8ec).
 
-Frankly, I need to work on disentangling these two ideas more, if only to be fair to the small-m category of emerging technologies that may yet have some promise, whoever ends up deploying them to actual users. I realized this while watching vlogger Marques Brownlee's [excellent recent video](https://www.youtube.com/watch?v=CqkhjL3WvWQ) on the metaverse.
+Frankly, I need to work on disentangling these two ideas more, if only to be fair to the small-m metaverse, whoever ends up deploying such tools to actual users. I realized this while watching vlogger Marques Brownlee's [excellent recent video](https://www.youtube.com/watch?v=CqkhjL3WvWQ) on the metaverse.
 
-He neatly covers the basics of metaverse technology, including the difference between augmented reality and virtual reality as the two building blocks of what's broadly referred to as the small-m "metaverse." Plus he gets a demo of capital-m Meta's gadgets from Mark Zuckerberg himself and gives a few thoughts of his own about how all this is shaping up.
+He neatly covers the basics of metaverse technology, including the difference between augmented reality (AR) and virtual reality (VR) as the two building blocks the small-m "metaverse." Plus he gets a demo of capital-m Meta's gadgets from Mark Zuckerberg himself and gives a few thoughts of his own about how all this is shaping up.
 
-Among Brownlee's impressions is this: No matter what you think of metaverse technology, it's a whole separate question whether we should want just one company to own everyone's experience of it.
+Among Brownlee's important insights is this: No matter what you think of metaverse technology, it's a whole separate question whether we should want just one company to own everyone's experience of it.
 
-I agree, it's pretty obvious that such an outcome would be awful, and it's worth discussing now, *before* the situation gets out of hand, as it has with search, social, and other products.
+I agree, it's pretty obvious that (1) such an outcome would be awful. And (2) it's worth discussing now, *before* the situation gets out of hand, as it has with search, social, and other products.
 
-Honestly, my own hunch is that AR and VR certainly are useful for gaming, as well as specialized training for certain dangerous jobs like flying an airplane or performing surgery. But when people start making statements like: "We're all going to live in the metaverse!"... Yeah... Umm... I just don't see a path to that yet.
+Honestly, my own hunch is that AR and VR certainly are useful for gaming, as well as specialized training for certain dangerous jobs like flying an airplane or performing surgery. But when people start making broad statements like: "We're all going to live in the metaverse!"... Yeah... Umm... I just don't see a path to that yet.
 
 But maybe I'm wrong.
 
-I would also say it's by no means certain that capital-m Meta will "win" this new cateogry, however it shapes up. The company has been [hemorrhaging money](https://decrypt.co/112952/metas-metaverse-division-reports-3-67-billion-quarterly-loss) on it, and Wall Street has hammered Meta stock as a result, leaving the price down 70% this year. <!-- Update sunday--> And one hedge fund manager even just published an [open letter](https://medium.com/@alt.cap/time-to-get-fit-an-open-letter-from-altimeter-to-mark-zuckerberg-and-the-meta-board-of-392d94e80a18) to Zuckerberg urging Meta to invest less of shareholders' money in AR and VR.
+I would also say it's by no means certain that capital-m Meta will "win" this new cateogry, however it shapes up. The company has been [hemorrhaging money](https://decrypt.co/112952/metas-metaverse-division-reports-3-67-billion-quarterly-loss) on it, and Wall Street has hammered Meta stock as a result, leaving the price down 70% this year. <!-- Update sunday--> One hedge fund manager even just published an [open letter](https://medium.com/@alt.cap/time-to-get-fit-an-open-letter-from-altimeter-to-mark-zuckerberg-and-the-meta-board-of-392d94e80a18) to Zuckerberg urging him to invest less of shareholders' money in AR and VR.
 
 That all becomes even more worrisome when you consider:
 
-- Delivering AR and VR services requires specialized new hardware. The history of big Silicon Valley companies doing both parts well, or transitioning from one to the other, is somewhat mixed. [Google Glass](https://www.slashgear.com/1057796/the-fascinating-true-story-behind-the-failure-of-google-glass/), anyone?
-- In particular, Facebook has arguably been trying to make the leap from services to hardware *for eight years*, since it bought [VR headset maker Oculus](https://about.fb.com/news/2014/03/facebook-to-acquire-oculus/) for $2 billion. I think they would prefer we all forget this little milestone now and just start the clock when the parent company Facebook [re-branded as Meta](https://about.fb.com/news/2021/10/facebook-company-is-now-meta/) in 2021. But, no, the timeline has really been running for them in this category for much longer. So why haven't they *already* succeded at it, exactly?  
-- Amazingly, after Meta's stock-market drubbing this year, Apple's valuation ([$2.4 trillion](https://finance.yahoo.com/quote/AAPL/key-statistics?p=AAPL)) is now almost *ten times* the size of Meta's ([$252 billion](https://finance.yahoo.com/quote/META/key-statistics?p=META)), with a longer track record of building high-end hardware and intuitive user experiences. <!-- Update on Sunday -->
+- **Delivering AR and VR services requires specialized new hardware.** The history of big Silicon Valley companies doing both software and hardware well, or transitioning from one to the other, is somewhat mixed. [Google Glass](https://www.slashgear.com/1057796/the-fascinating-true-story-behind-the-failure-of-google-glass/), anyone?
+- **Facebook/Meta in particular has arguably been trying to leap from services to hardware for EIGHT YEARS already,** since it bought [VR headset maker Oculus](https://about.fb.com/news/2014/03/facebook-to-acquire-oculus/) for $2 billion. I think they would prefer we all forget this little milestone now and just start the clock when the parent company Facebook [re-branded as Meta](https://about.fb.com/news/2021/10/facebook-company-is-now-meta/) in 2021. But, no, the timeline has really been running for them in the small-m metaverse category for much longer, since the Oculus acquisition back in 2014. So why exactly haven't they *already* succeded at it?  
+- **Potential competition.** Amazingly, after Meta's stock-market drubbing this year, Apple's valuation ([$2.4 trillion](https://finance.yahoo.com/quote/AAPL/key-statistics?p=AAPL)) is now almost *ten times* the size of Meta's ([$252 billion](https://finance.yahoo.com/quote/META/key-statistics?p=META)), with a longer track record of building high-end hardware and intuitive user experiences. <!-- Update on Sunday -->
 
-Of course, Apple hasn't made any splashy announcements about metaverse products yet. But you can almost hear the [theme to Jaws](https://www.youtube.com/watch?v=BX3bN5YeiQs) playing in your head if you think about what they could very plausibly do here, no?
+Apple hasn't made any splashy announcements about metaverse products -- yet. But you can almost hear the [theme to Jaws](https://www.youtube.com/watch?v=BX3bN5YeiQs) playing in your head if you think about what they could very plausibly do here, no?
 
 The week's other headlines:
 
